--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
 index:
     path: /
-    controller: App\Controller\TranslationController::index
+    controller: App\Controller\DashboardController::index
