--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,14 @@
     "php": ">=7.2.5",
     "ext-ctype": "*",
     "ext-iconv": "*",
+    "ext-json": "*",
     "doctrine/annotations": "^1.0",
     "doctrine/doctrine-bundle": "^2.6",
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.12",
     "friendsofsymfony/jsrouting-bundle": "^2.8",
     "phpdocumentor/reflection-docblock": "^5.3",
+    "phpoffice/phpspreadsheet": "^1.23",
     "phpstan/phpdoc-parser": "^1.5",
     "sensio/framework-extra-bundle": "^6.1",
     "symfony/apache-pack": "^1.0",
@@ -46,8 +48,7 @@
     "symfony/webpack-encore-bundle": "^1.14",
     "symfony/yaml": "5.4.*",
     "twig/extra-bundle": "^2.12|^3.0",
-    "twig/twig": "^2.12|^3.0",
-    "ext-json": "*"
+    "twig/twig": "^2.12|^3.0"
   },
   "config": {
     "allow-plugins": {
