--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,4 @@
 index:
     path: /
-    controller: App\Controller\DashboardController::index
+    controller: App\Controller\ComparisonController::index
+
